--- a/templates/rooms/home.html
+++ b/templates/rooms/home.html
@@ -1,5 +1,19 @@
 <!-- 상속 선언 -->
-{% extends "base.html" %} {% block page_name %} Home {% endblock page_name %}
-{%block content %} {% for room in potato %}
-<h1>{{room.name}} / ${{room.price}}</h1>
-{% endfor %} {% endblock content %}
+{% extends "base.html" %}
+{% block page_name %} 
+    Home
+{% endblock page_name %}
+
+{% block content %} 
+
+    {% for room in potato %}
+        <h1>{{room.name}} / ${{room.price}}</h1>
+    {% endfor %} 
+
+    <h5> Page {{page}} of {{page_count}}</h5>
+
+    {% for page in page_range %}
+        <a href="?page={{page}}">{{page}}</a>
+    {% endfor %}
+
+{% endblock content %}
