--- a/templates/rooms/home.html
+++ b/templates/rooms/home.html
@@ -6,19 +6,19 @@
 
 {% block content %} 
 
-    {% for room in potato %}
+    {% for room in page.object_list  %}
         <h1>{{room.name}} / ${{room.price}}</h1>
     {% endfor %} 
 
     <h5>
-    {% if page is not 1 %}
-        <a href="?page={{page|add:-1}}">Previous</a>
+    {% if page.has_previous %}
+        <a href="?page={{page.previous_page_number}}">Previous</a>
     {% endif %}
 
-    Page {{page}} of {{page_count}}
+    Page {{page.number}} of {{page.paginator.num_pages}}
 
-    {% if not page == page_count  %}
-        <a href="?page={{page|add:1}}">Next</a>
+    {% if page.has_next  %}
+        <a href="?page={{page.next_page_number}}">Next</a>
     {% endif %}
 
 {% endblock content %}
