#16.3 Verifying Email part Two

--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,6 @@
     <title>{% block page_title %}{% endblock page_title %}| Nbnb</title>
   </head>
   <body>
-    {% include "partials/nav.html" %} {% block content %}{% endblock %}
     <header>
       {% include "partials/nav.html" %}
       {% block search-bar %}
@@ -16,5 +15,9 @@
         </form>
       {% endblock search-bar %}
     </header>
+
+    {% block content %}{% endblock %}
+
+    {% include "partials/footer.html" %}
   </body>
 </html>
