#17.1 Getting Github Profile

--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -14,7 +14,6 @@
     <form method="POST" action="{% url "users:signup" %}">
         {% csrf_token %}
         {{form.as_p}}
-        <button>Sign Up</button>
+        <button>Sign up</button>
     </form>
-
-{% endblock content %} 
+{% endblock content %}
